--- a/src/DataTransfer.EntityFramework/DataTransfer.EntityFramework.csproj
+++ b/src/DataTransfer.EntityFramework/DataTransfer.EntityFramework.csproj
@@ -1,12 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="3.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataTransfer.Domain\DataTransfer.Domain.csproj" />
   </ItemGroup>
 
 </Project>
