--- a/src/DataTransfer.HttpApi.Host/Properties/launchSettings.json
+++ b/src/DataTransfer.HttpApi.Host/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "DataTransfer.HttpApi.Host": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api/ABC/AddCoupan",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
