--- a/src/DataTransfer.Application.Contracts/DataTransfer.Application.Contracts.csproj
+++ b/src/DataTransfer.Application.Contracts/DataTransfer.Application.Contracts.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="3.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DataTransfer.Domain.Shared\DataTransfer.Domain.Shared.csproj" />
   </ItemGroup>
 
