--- a/src/DataTransfer.Application/DataTransfer.Application.csproj
+++ b/src/DataTransfer.Application/DataTransfer.Application.csproj
@@ -1,4 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <ItemGroup>
+    <PackageReference Include="Volo.Abp.Ddd.Application" Version="3.3.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DataTransfer.Application.Contracts\DataTransfer.Application.Contracts.csproj" />
