--- a/src/DataTransfer.Domain/DataTransfer.Domain.csproj
+++ b/src/DataTransfer.Domain/DataTransfer.Domain.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.Ddd.Domain" Version="3.3.1" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="3.3.1" />
   </ItemGroup>
 
