--- a/src/DataTransfer.Application/DataTransfer.Application.csproj
+++ b/src/DataTransfer.Application/DataTransfer.Application.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DataTransfer.Application.Contracts\DataTransfer.Application.Contracts.csproj" />
     <ProjectReference Include="..\DataTransfer.Domain\DataTransfer.Domain.csproj" />
+    <ProjectReference Include="..\DataTransfer.EntityFramework\DataTransfer.EntityFramework.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
