--- a/src/DataTransfer.EntityFramework/DataTransfer.EntityFramework.csproj
+++ b/src/DataTransfer.EntityFramework/DataTransfer.EntityFramework.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="3.3.1" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="3.3.1" />
   </ItemGroup>
 
   <ItemGroup>
