--- a/src/DataTransfer.Application.Contracts/DataTransfer.Application.Contracts.csproj
+++ b/src/DataTransfer.Application.Contracts/DataTransfer.Application.Contracts.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="3.3.1" />
