--- a/DataTransfer.Infrastructure/DataTransfer.Infrastructure.csproj
+++ b/DataTransfer.Infrastructure/DataTransfer.Infrastructure.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Volo.Abp.Core" Version="3.3.1" />
   </ItemGroup>
 
