--- a/src/DataTransfer.Application/DataTransfer.Application.csproj
+++ b/src/DataTransfer.Application/DataTransfer.Application.csproj
@@ -5,10 +5,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\DataTransfer.Infrastructure\DataTransfer.Infrastructure.csproj" />
     <ProjectReference Include="..\DataTransfer.Application.Contracts\DataTransfer.Application.Contracts.csproj" />
     <ProjectReference Include="..\DataTransfer.Domain\DataTransfer.Domain.csproj" />
     <ProjectReference Include="..\DataTransfer.EntityFramework\DataTransfer.EntityFramework.csproj" />
+    <ProjectReference Include="..\DataTransfer.Infrastructure\DataTransfer.Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
