--- a/src/DataTransfer.HttpApi.Host/appsettings.json
+++ b/src/DataTransfer.HttpApi.Host/appsettings.json
@@ -1,7 +1,9 @@
 {
   "CRMSettings": {
     "ClassSendMTSUrl": "http://mtsapidev.365eme.com:8086/api/StudentContract/InitABCClassAsync",
-    "StudentSendMTSUrl": "http://mtsapidev.365eme.com:8086/api/StudentContract/BusiTEENCreateAndUpdateContract"
+    "StudentSendMTSUrl": "http://mtsapidev.365eme.com:8086/api/StudentContract/BusiTEENCreateAndUpdateContract",
+    "MTSPlatformKey": "0ca10fdbfc994b6dea8af3c9ea751dd9",
+    "OrderSendMTSUrl": "http://mtsapidev.365eme.com:8086/api/StudentContract/BusiTEENCreateAndUpdateContract"
   },
   "Logging": {
     "LogLevel": {
