--- a/src/DataTransfer.HttpApi.Host/Properties/launchSettings.json
+++ b/src/DataTransfer.HttpApi.Host/Properties/launchSettings.json
@@ -5,7 +5,8 @@
       "launchBrowser": true,
       //"launchUrl": "api/ABC/AddCoupan",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        //"ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_ENVIRONMENT": "Product"
       },
       "applicationUrl": "http://localhost:5000"
     }
