--- a/src/DataTransfer.Domain/DataTransfer.Domain.csproj
+++ b/src/DataTransfer.Domain/DataTransfer.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Ddd.Domain" Version="3.3.1" />
