--- a/test/ConsoleTest/ConsoleTest.csproj
+++ b/test/ConsoleTest/ConsoleTest.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\DataTransfer.Domain\DataTransfer.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
