--- a/src/DataTransfer.HttpApi.Host/appsettings.Product.json
+++ b/src/DataTransfer.HttpApi.Host/appsettings.Product.json
@@ -1,4 +1,11 @@
 {
+  "CRMSettings": {
+    "ClassSendMTSUrl": "http://mtsapi.365eme.com/api/StudentContract/InitABCClassAsync",
+    "ClassProcessSetUrl": "http://mtsapi.365eme.com/api/StudentContract/InitABCClassAndStudentProgressAsync",
+    "StudentSendMTSUrl": "http://mtsapi.365eme.com/api/StudentContract/BusiTEENCreateAndUpdateContract",
+    "MTSPlatformKey": "0ca10fdbfc994b6dea8af3c9ea751dd9",
+    "OrderSendMTSUrl": "http://mtsapi.365eme.com/api/StudentContract/BusiTEENCreateAndUpdateContract"
+  },
   "ConnectionStrings": {
     "LocalMysql": "Server=127.0.0.1;Port=3306;Database=DataTrans;Uid=root;Pwd=alexwillbegood;",
     "ABCCrm": "server=39.96.72.95,10086;database=AbcCRM;uid=sa;pwd=j$5I-STYeSpcVk#utmsatzMD"
