--- a/src/DataTransfer.HttpApi.Host/Properties/launchSettings.json
+++ b/src/DataTransfer.HttpApi.Host/Properties/launchSettings.json
@@ -4,8 +4,8 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Product"
-        //"ASPNETCORE_ENVIRONMENT": "Development"
+        //"ASPNETCORE_ENVIRONMENT": "Product"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5000"
     },
