--- a/src/DataTransfer.HttpApi.Host/appsettings.Development.json
+++ b/src/DataTransfer.HttpApi.Host/appsettings.Development.json
@@ -8,8 +8,8 @@
   },
   "ConnectionStrings": {
     "LocalMysql": "Server=127.0.0.1;Port=3306;Database=DataTrans;Uid=root;Pwd=alexwillbegood;",
-    //"ABCCrm": "server=172.21.4.132;database=AbcCRM;uid=sa;pwd=Meten#2019",
-    "ABCCrm": "server=39.96.72.95,10086;database=AbcCRM;uid=sa;pwd=j$5I-STYeSpcVk#utmsatzMD"
+    "ABCCrm": "server=172.21.4.132;database=AbcCRM;uid=sa;pwd=Meten#2019",
+    //"ABCCrm": "server=39.96.72.95,10086;database=AbcCRM;uid=sa;pwd=j$5I-STYeSpcVk#utmsatzMD"
   },
   "Logging": {
     "LogLevel": {
