--- a/src/DataTransfer.HttpApi.Host/appsettings.json
+++ b/src/DataTransfer.HttpApi.Host/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ElasticSearchSettings": {
+    "BaseLocalUrl": "http://localhost:9200/"
+  },
   "AllowedHosts": "*"
 
 }
