--- a/src/DataTransfer.HttpApi.Host/appsettings.json
+++ b/src/DataTransfer.HttpApi.Host/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ElasticSearchSettings": {
-    "BaseLocalUrl": "http://localhost:9200/"
+    "BaseLocalUrl": "http://localhost:9200"
   },
   "AllowedHosts": "*"
 
