--- a/src/DataTransfer.Application.Contracts/DataTransfer.Application.Contracts.csproj
+++ b/src/DataTransfer.Application.Contracts/DataTransfer.Application.Contracts.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Dtos\InputDtos\" />
     <Folder Include="Dtos\OutputDtos\" />
   </ItemGroup>
 
