--- a/src/DataTransfer.HttpApi.Host/Properties/launchSettings.json
+++ b/src/DataTransfer.HttpApi.Host/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         //"ASPNETCORE_ENVIRONMENT": "Product"
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Staging"
       },
       "applicationUrl": "http://localhost:5000"
     },
